@@ -1,3 +1,8 @@
+2017-06-13  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* soap-client.el (soap-invoke-internal): make SOAPAction header a
+	utf-8 encoded string (See bug #21)
+
 2017-05-24  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
 
 	* soap-client.el: Bump version to 3.1.2.
